--- a/assets/global.css
+++ b/assets/global.css
@@ -36,16 +36,13 @@ a {
    color: currentColor
 }
 
-canvas:hover ~ #__EIGHTEEN-CURSOR {
-   @apply p-4
-}
-
 #__EIGHTEEN-CURSOR div.cursor-container {
    box-shadow: 0px 0 0px 1px white, 0px 0 0px 3px #000000, 0px 0 0px 4px #ffffff
 }
 
 canvas {
-   @apply absolute top-0 right-0 select-none pointer-events-none dark:opacity-[0.1] opacity-70 md:block hidden
+   @apply absolute top-0 right-0 select-none pointer-events-none dark:opacity-[0.1] opacity-70 md:block hidden;
+   height: 100% !important
 }
 
 .__EIGHTEEN-PROJECT-IMAGE {
