--- a/assets/global.css
+++ b/assets/global.css
@@ -23,7 +23,7 @@
 }
 
 html, body {
-   @apply m-0 bg-white dark:bg-black bg-dot dark:bg-dot-dark text-white font-sans overflow-x-hidden md:animate-dot overflow-y-auto;
+   @apply m-0 bg-white dark:bg-black bg-dot dark:bg-dot-dark text-white font-sans overflow-x-hidden overflow-y-auto;
    background-size: 3em 3em;
 }
 
