--- a/assets/global.css
+++ b/assets/global.css
@@ -1,48 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Iceberg&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-:root.dark {
+:root {
    color-scheme: dark
 }
 
-@keyframes dotmove {
-   0% {
-      background-size: 3em 3em
-   }
-   25% {
-      background-size: 3em 6em
-   }
-   50% {
-      background-size: 6em 6em
-   }
-   75% {
-      background-size: 6em 3em
-   }
-   100% {
-      background-size: 3em 3em
-   }
-}
-
 html, body {
-   @apply m-0 bg-white dark:bg-black text-white font-sans overflow-x-hidden overflow-y-auto;
-   background-size: 3em 3em;
+   @apply m-0 bg-black text-white font-sans overflow-x-hidden overflow-y-auto
 }
 
 html, body, #__EIGHTEEN {
    @apply w-full h-full
 }
 
+@keyframes slide-right {
+   0% {
+      opacity: 0;
+      transform: translateX(-20px)
+   }
+   50% {
+      transform: translateX(0px);
+      opacity: 1
+   }
+   100% {
+      transform: translateX(20px);
+      opacity: 0
+   }
+}
+
 a {
    @apply underline;
    color: currentColor
-}
-
-#__EIGHTEEN-CURSOR div.cursor-container {
-   box-shadow: 0px 0 0px 1px white, 0px 0 0px 3px #000000, 0px 0 0px 4px #ffffff
-}
-
-canvas {
-   @apply absolute top-0 right-0 select-none pointer-events-none dark:opacity-[0.1] opacity-70 md:block hidden;
-   height: 100% !important
 }
 
 .__EIGHTEEN-PROJECT-IMAGE {
@@ -63,17 +50,5 @@ a:active, button:active {
 }
 
 button {
-   @apply outline-none border-none
-}
-
-html.cursor-enabled {
-   @apply md:overflow-hidden;
-}
-
-html.cursor-enabled * {
-   cursor: none !important
-}
-
-button {
-   @apply bg-transparent font-sans text-base m-0 p-0 cursor-pointer
+   @apply bg-transparent font-sans text-base m-0 p-0 cursor-pointer outline-none border-none
 }
