--- a/assets/global.css
+++ b/assets/global.css
@@ -46,7 +46,7 @@ a {
 }
 
 .__EIGHTEEN-PROJECT:hover .__EIGHTEEN-PROJECT-DETAILS {
-   @apply opacity-100 right-5 duration-200
+   @apply opacity-100 md:right-5 right-3 duration-200
 }
 
 a.router-link-active {
