--- a/assets/global.css
+++ b/assets/global.css
@@ -5,13 +5,10 @@
 }
 
 html, body {
-   @apply m-0 bg-black text-white font-sans overflow-x-hidden overflow-y-auto;
-   background-image: url(/bg.jpg);
-   background-size: 100% 100%;
-   background-blend-mode: overlay
+   @apply m-0 bg-white text-black font-sans cursor-none overflow-hidden
 }
 
-html, body, #__EIGHTEEN {
+html, body, #__THEMILLIONCITIES {
    @apply w-full h-full
 }
 
@@ -44,7 +41,7 @@ a {
 }
 
 .__EIGHTEEN-PROJECT:hover .__EIGHTEEN-PROJECT-IMAGE {
-   @apply md:clippy sm:clippy-large clippy-xl;
+   /* @apply md:clippy sm:clippy-large clippy-xl; */
    opacity: 100;
 }
 
@@ -52,14 +49,37 @@ a {
    @apply opacity-100 md:right-5 right-3 duration-200
 }
 
-a.router-link-active {
+a.topbar-link.router-link-active {
    @apply underline
 }
 
-a:active, button:active {
+a.topbar-link:active, button:active {
    @apply translate-y-px
 }
 
 button {
    @apply bg-transparent font-sans text-base m-0 p-0 cursor-pointer outline-none border-none
 }
+
+* {
+   cursor: none !important
+}
+
+canvas {
+   @apply absolute top-0 right-0 select-none pointer-events-none dark:opacity-[0.1] opacity-70 md:block hidden
+}
+
+/* width */
+::-webkit-scrollbar {
+   width: 4px;
+ }
+  
+ /* Handle */
+ ::-webkit-scrollbar-thumb {
+   background: darkgray; 
+ }
+ 
+ /* Handle on hover */
+ ::-webkit-scrollbar-thumb:hover {
+   background: gray; 
+ }
