--- a/assets/global.css
+++ b/assets/global.css
@@ -5,27 +5,14 @@
 }
 
 html, body {
-   @apply m-0 bg-black text-white font-sans overflow-hidden;
+   @apply m-0 bg-white text-black font-sans overflow-hidden;
 }
 
-html, body, #__AMILLIONCITIES {
+html, body, #__nuxt {
    @apply w-full h-full
 }
 
 body:before {
-   z-index: 0;
-   content: "";
-   background: linear-gradient(90deg, rgb(7 7 7), rgba(7, 7, 7, 0));
-   background-size: 100%;
-   mix-blend-mode: soft-light;
-   width: 100%;
-   height: 100%;
-   position: absolute;
-   top: 0;
-   left: 0
-}
-
-body:after {
    z-index: 0;
    content: "";
    background: url(/noise.png);
@@ -97,7 +84,7 @@ button {
 }
 
 canvas {
-   @apply absolute top-0 right-0 select-none pointer-events-none opacity-25 z-10 invert md:block hidden
+   @apply absolute top-0 right-0 select-none pointer-events-none opacity-50 z-10 lg:block hidden
 }
 
 div.AEXHELL-INTERACTION-GRADIENT:before {
@@ -111,12 +98,22 @@ div.AEXHELL-INTERACTION-GRADIENT:before {
    top: 0
 }
 
+main {
+   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20'%3E%3Crect width='0' height='20' fill='%23fff00' /%3E%3Crect x='0%' width='1' height='100%' fill='rgba(54, 52, 49, 0.2)' /%3E%3Crect y='0%' width='100%' height='1' fill='rgba(54, 52, 49, 0.2)' /%3E%3C/svg%3E%0A");
+}
+
+#AEXHELL-TITLE {
+   writing-mode: vertical-lr;
+   margin: 0;
+   margin-block: 0
+}
+
 h1,h2,h3,h4,h5,h6 {
    @apply font-display font-light
 }
 
-* {
-   @apply md:cursor-none !important;
+h1,h2,h3,h4,h5,h6,a,p,span {
+   text-shadow: 0 0 10px rgba(54, 52, 49, 0.5)
 }
 
 /* width */
