--- a/assets/global.css
+++ b/assets/global.css
@@ -103,17 +103,15 @@ main {
 }
 
 #AEXHELL-TITLE {
-   writing-mode: vertical-lr;
+   text-align: right;
+   writing-mode: vertical-rl;
+   rotate: 180deg;
    margin: 0;
    margin-block: 0
 }
 
 h1,h2,h3,h4,h5,h6 {
    @apply font-display font-light
-}
-
-h1,h2,h3,h4,h5,h6,a,p,span {
-   text-shadow: 0 0 10px rgba(54, 52, 49, 0.5)
 }
 
 /* width */
